--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,4 +1,6 @@
+
 @import "tailwindcss";
+@import "./theme.css";
 
 
 @font-face {
@@ -22,13 +24,9 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
+    --background: #1C1C1C;
     --foreground: #ededed;
   }
-}
-
-div {
-  background-color: black;
 }
 
 body {
