--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,7 +1,5 @@
-
 @import "tailwindcss";
 @import "./theme.css";
-
 
 @font-face {
   font-family: "Pretendard Variable";
@@ -24,12 +22,37 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #1C1C1C;
+    --background: #1c1c1c;
     --foreground: #ededed;
   }
 }
 
-body {
+
+
+body, html {
   background: var(--background);
   color: var(--foreground);
+  height: 100%;
+}
+
+input,
+button {
+  outline: 0;
+}
+
+button {
+  cursor: pointer;
+}
+
+::-webkit-scrollbar {
+  width: 5px;
+  height: 5px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: #1c1c1c;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #252525;
 }
